playground dynamic innerhtml

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,14 +7,5 @@
     <link rel="stylesheet" href="../static/css/style.css" />
     <script type="module" src="../static/js/index.js"></script>
   </head>
-  <body>
-    <h1>My SPA</h1>
-    <nav>
-      <a href="/" data-link>Home</a>
-      <a href="/about" data-link>About</a>
-      <a href="/contact" data-link>Contact</a>
-    </nav>
-
-    <main id="app"></main>
-  </body>
+  <body id="app"></body>
 </html>
