add state, components, layout for error

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <title>Spa</title>
     <link rel="stylesheet" href="../static/css/style.css" />
     <script type="module" src="../static/js/index.js"></script>
+    <script type="module" src="../static/js/store/index.js"></script>
   </head>
   <body id="app"></body>
 </html>
