--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,5 +8,32 @@
     <script type="module" src="../static/js/index.js"></script>
     <script type="module" src="../static/js/store/index.js"></script>
   </head>
-  <body id="app"></body>
+  <body>
+    <main id="app"></main>
+
+    <!-- TEMPLATE = NAVIGATOR N'AFFCICHERA PAS LE HTML dans les balises template -->
+    <!-- template est ensuite récupérable coté JS avec l'ID pour l'afficher ensuite -->
+    <template id="templateHomeView">
+      <section>
+        <h2>Welcome to mySPA</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi
+          vitae mollitia illo officiis? Atque ut ab, ipsa, sed accusantium
+          eveniet facere fuga dignissimos, ratione placeat officiis rerum
+          dolorum eligendi voluptatum!
+        </p>
+        <p id="storeValue"></p>
+        <pre id="storeUser"></pre>
+      </section>
+    </template>
+
+    <template id="templateFooterGlobal">
+      <footer>
+        <ul>
+          <li>About me</li>
+          <li>Find me</li>
+        </ul>
+      </footer>
+    </template>
+  </body>
 </html>
